# MiniProj_Agent1_LongTermMemory

./: .env.example  .gitignore  .sh  Dockerfile  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  README.md  README_IMPLEMENTATION.md  README_STRUCTURE.md  REPOSITORY_IMPLEMENTATION_STATUS.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.cursor/plans/: integrate_mem0_rest_api_with_5-layer_caching_+_proactive_warming_5ead66d7.plan.md  triển_khai_pika_memory_system_-_clean_architecture_+_caching_5_lớp_096f29f4.plan.md
1_mem0-agent/iterations/: README.md
3_dataset/: .sh
3_dataset/robot_pika/: docs_.md  docs_MECEdataset.md  docs_benchmark.md
3_dataset/robot_pika/memories/: MECE_memories_v3_updated.xlsx  data1.xlsx  data1_result.xlsx
3_dataset/robot_pika/search/: MECE_search_api_test_final.xlsx
3_dataset/utils/docs/: docs1.1_.md  docs1.2_result.md
3_dataset/utils/results/: retrieval_results_20260105_110159.json  retrieval_results_20260105_113201.json
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  extract.py  health.py  jobs.py  memory.py  precompute.py  search.py
app/api/v1/schemas/: __init__.py  extract.py  jobs.py  memory.py  search.py
app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  security.py
app/domains/: __init__.py
app/domains/memory/: __init__.py
app/domains/memory/application/: __init__.py
app/domains/memory/application/repositories/: __init__.py  fact_repository.py  job_repository.py  memory_repository.py
app/domains/memory/application/services/: __init__.py  extraction_service.py  fact_extractor_service.py  fact_searcher_service.py  job_service.py  memory_orchestrator.py  memory_service.py  stm_service.py
app/domains/memory/domain/: __init__.py  entities.py  exceptions.py  stm_value_objects.py  value_objects.py
app/domains/memory/infrastructure/: __init__.py
app/domains/memory/infrastructure/models/: __init__.py  job_model.py
app/domains/memory/infrastructure/repositories/: __init__.py  fact_repository_impl.py  job_repository_impl.py  memory_repository_impl.py
app/infrastructure/: __init__.py
app/infrastructure/cache/: __init__.py  cache_service.py  client.py  keys.py  l0_session_cache.py  l1_cache.py  l1_redis_cache.py  l2_materialized_view.py  l3_embedding_cache.py  proactive_cache.py  semantic_cache.py
app/infrastructure/database/: __init__.py  postgres_session.py
app/infrastructure/db/: __init__.py  connection.py  models.py  session.py
app/infrastructure/mem0/: __init__.py  mem0_client.py
app/infrastructure/messaging/: __init__.py  rabbitmq_service.py
app/infrastructure/search/: __init__.py  hybrid_search.py  milvus_client.py
app/middleware/: __init__.py  error_handler.py  logging_middleware.py
app/resilience/: __init__.py  circuit_breaker.py  retry.py
app/security/: __init__.py
app/services/: __init__.py  precomputation_service.py
app/utils/: __init__.py  helpers.py
docs/: API_TEST_CURL.md  INSTALLATION.md  SO_SANH_VOI_MEM0.md  Step 2 - Output 3 - Caching 5 lớp.md  Step 3 - m2 - mem0-is-remote-service.md  Step 3 Code and opt.md  docs1.1_NewSDD.md  docs1.2_NewSDD_about_Optimization.md  docs1.3_ProjectFolderStructure.md  docs14_NhinLaiQuaTrinh.md  docs2.1_report_optimization_implemented.md  docs2.1_report_step2_implement.md  docs2.2_GIAI_THICH_CHIEN_LUOC_OPTIMIZATION.md  docs2.2_OPTIMIZATION_SUMMARY.md  docs2.3_BUG_FIX_REPORT_MILVUS_CONNECTION.md  docs2.3_DATABASE_SETUP.md  link.md
docs/CKP/: DataFlow.md  Structure_Decision_Analysis.md  docs1.1_IMPLEMENTATION_SUMMARY.md  docs1.1_VongLapVoHan.md
mem0/client/: main.py
scripts/: init_db.py  run_api.py  run_worker.py  test_api.py  test_api.sh
src/: main.py
src/memory/: mem_client.py
tests/: README.md  conftest.py
tests/api/: test_async_example.py  test_extract_endpoint.py  test_health_endpoint.py  test_search_endpoint.py
tests/integration/: test_api_endpoints.py  test_fact_repository_integration.py
tests/unit/: test_job_service.py  test_memory_orchestrator.py  test_memory_service.py
tests/unit/domains/: test_fact_extractor_service.py  test_fact_repository.py  test_fact_searcher_service.py
workers/: __init__.py  main.py
workers/tasks/: extraction_task.py  proactive_cache_task.py
