[build-system]
requires = ["setuptools==75.6.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pika-mem0-enterprise"
version = "1.0.0"
description = "Self-hosted long-term memory system for PIKA robot"
readme = "README_STRUCTURE.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
authors = [
    {name = "PIKA Team"}
]
keywords = ["memory", "ai", "fastapi", "vector-store", "graph-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

# Core dependencies - all pinned
dependencies = [
    # FastAPI and Web Server
    "fastapi==0.123.5",
    "uvicorn[standard]==0.38.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",

    # Pydantic
    # Note: mcp 1.25.0 requires pydantic>=2.11.0,<3.0.0
    "pydantic==2.11.0",
    "pydantic-settings==2.6.1",

    # Database
    "asyncpg==0.29.0",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.13.3",

    # Cache
    "redis[hiredis]==5.0.1",

    # Vector Store (Milvus)
    "pymilvus==2.3.7",
    "marshmallow==3.22.0",

    # Graph Database (Neo4j)
    "neo4j==5.26.0",

    # OpenAI
    # Note: mem0ai 1.0.1 requires openai>=1.90.0
    "openai==1.90.0",

    # Message Queue
    "pika==1.3.2",

    # Scheduling
    "apscheduler==3.10.4",

    # Resilience
    "tenacity==8.5.0",

    # Mem0 (OSS support)
    # Note: Latest available version on PyPI is 1.0.1 (as of 2025-01-21)
    "mem0ai==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
]

[project.urls]
Homepage = "https://github.com/pika-team/pika-mem0-enterprise"
Documentation = "https://github.com/pika-team/pika-mem0-enterprise/docs"
Repository = "https://github.com/pika-team/pika-mem0-enterprise"

[tool.setuptools]
packages = ["app", "mem0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]
